change for portfolio link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!---Conatiner, adjust the width for each device-->
         <div class="container">
             <!----navbar brand icon-->
-          <a class="navbar-brand title-icon" href="#"><span class='font-primary'>P</span>ortfolio</a>
+          <a class="navbar-brand title-icon" href="https://portfolio-wd-mohan.herokuapp.com/"><span class='font-primary'>P</span>ortfolio</a>
           <!--navbar toggler, for use with out coolapse plugin and other navigation toggling behaviours. -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
